objects/HealthCloudGA__EhrMedicationPrescription__c.object
<CustomObject>
    <description>An order for both supply of the medication and the instructions for administration of the medicine to a patient.</description>
    <fields>
        <fullName>HealthCloudGA__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Individual account which represents the patient in force.com</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Medication Prescriptions</relationshipLabel>
        <relationshipName>MedicationPrescriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DateWritten__c</fullName>
        <label>Date Written</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DispenseExpectedSupplyDuration__c</fullName>
        <label>Dispense Expected Supply Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DispenseMedicationCodeSystem__c</fullName>
        <description>System for Code that identifies this medication</description>
        <inlineHelpText>System for Code that identifies this medication</inlineHelpText>
        <label>Dispense Medication Code System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DispenseMedicationCode__c</fullName>
        <description>Code that identify this medication</description>
        <inlineHelpText>Code that identify this medication</inlineHelpText>
        <label>Dispense Medication Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DispenseMedicationExpiration__c</fullName>
        <label>Dispense Medication Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DispenseMedicationIsBrand__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if a brand</description>
        <inlineHelpText>True if a brand</inlineHelpText>
        <label>Dispense Medication Is Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DispenseMedicationKindCode__c</fullName>
        <description>product | package code</description>
        <inlineHelpText>product | package code</inlineHelpText>
        <label>Dispense Medication Kind Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DispenseMedicationKindLabel__c</fullName>
        <description>product | package friendly name</description>
        <inlineHelpText>product | package friendly name</inlineHelpText>
        <label>Dispense Medication Kind Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DispenseMedicationKindSystem__c</fullName>
        <description>product | package code system</description>
        <inlineHelpText>product | package code system</inlineHelpText>
        <label>Dispense Medication Kind System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DispenseMedicationLabel__c</fullName>
        <description>Friendly name for this medication</description>
        <inlineHelpText>Friendly name for this medication</inlineHelpText>
        <label>Dispense Medication Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DispenseMedicationLotNumber__c</fullName>
        <description>Lot number for medication batch</description>
        <inlineHelpText>Lot number for medication batch</inlineHelpText>
        <label>Dispense Medication Lot Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DispenseMedicationName__c</fullName>
        <description>Common / Commercial name</description>
        <inlineHelpText>Common / Commercial name</inlineHelpText>
        <label>Dispense Medication Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DispenseMedicationProductFormCode__c</fullName>
        <description>powder | tablets | carton + code</description>
        <inlineHelpText>powder | tablets | carton + code</inlineHelpText>
        <label>Dispense Medication Product Form Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DispenseMedicationProductFormLabel__c</fullName>
        <description>powder | tablets | carton + friendly name</description>
        <inlineHelpText>powder | tablets | carton + friendly name</inlineHelpText>
        <label>Dispense Medication Product Form Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DispenseMedicationProductFormSystem__c</fullName>
        <description>powder | tablets | carton + system</description>
        <inlineHelpText>powder | tablets | carton + system</inlineHelpText>
        <label>Dispense Medication Product Form System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DispenseNumberOfRepeatAllowed__c</fullName>
        <label>Dispense Number Of Repeat Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DispenseQuantityUnit__c</fullName>
        <description>Amount of medication to supply per dispense unit of measure</description>
        <inlineHelpText>Amount of medication to supply per dispense unit of measure</inlineHelpText>
        <label>Dispense Quantity Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DispenseQuantityValue__c</fullName>
        <description>Amount of medication to supply per dispense</description>
        <inlineHelpText>Amount of medication to supply per dispense</inlineHelpText>
        <label>Dispense Quantity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DispenseValidityPeriodEnd__c</fullName>
        <label>Dispense Validity Period End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DispenseValidityPeriodStart__c</fullName>
        <label>Dispense Validity Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Encounter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Encounter</label>
        <referenceTo>HealthCloudGA__EhrEncounter__c</referenceTo>
        <relationshipLabel>Medication Prescriptions</relationshipLabel>
        <relationshipName>MedicationPrescriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>IF Status = Completed AND (Dispense Validity Period End + Dispense Expected Supply Duration) &gt; TODAY return true else return false</description>
        <formula>IF( AND( UPPER(HealthCloudGA__StatusLabel__c) = &apos;COMPLETED&apos;, (DateValue(HealthCloudGA__DispenseValidityPeriodEnd__c + HealthCloudGA__DispenseExpectedSupplyDuration__c) &gt; TODAY())) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationCodeLabel__c</fullName>
        <description>Friendly name for medication code</description>
        <inlineHelpText>Friendly name for medication code</inlineHelpText>
        <label>Medication Code Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationCodeSystem__c</fullName>
        <description>System for Code that identifies this medication</description>
        <inlineHelpText>System for Code that identifies this medication</inlineHelpText>
        <label>Medication Code System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationCode__c</fullName>
        <description>Code that identify this medication</description>
        <inlineHelpText>Code that identify this medication</inlineHelpText>
        <label>Medication Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationExpiration__c</fullName>
        <label>Medication Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationIsBrand__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if a brand</description>
        <inlineHelpText>True if a brand</inlineHelpText>
        <label>Medication Is Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationKindCode__c</fullName>
        <description>product | package code</description>
        <inlineHelpText>product | package code</inlineHelpText>
        <label>Medication Kind Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationKindLabel__c</fullName>
        <description>product | package friendly name</description>
        <inlineHelpText>product | package friendly name</inlineHelpText>
        <label>Medication Kind Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationKindSystem__c</fullName>
        <description>product | package code system</description>
        <inlineHelpText>product | package code system</inlineHelpText>
        <label>Medication Kind System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationLotNumber__c</fullName>
        <description>Lot number for medication batch</description>
        <inlineHelpText>Lot number for medication batch</inlineHelpText>
        <label>Medication Lot Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationName__c</fullName>
        <description>Common / Commercial name</description>
        <inlineHelpText>Common / Commercial name</inlineHelpText>
        <label>Medication Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationProductFormCode__c</fullName>
        <description>powder | tablets | carton + code</description>
        <inlineHelpText>powder | tablets | carton + code</inlineHelpText>
        <label>Medication Product Form Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationProductFormLabel__c</fullName>
        <description>powder | tablets | carton + friendly name</description>
        <inlineHelpText>powder | tablets | carton + friendly name</inlineHelpText>
        <label>Medication Product Form Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicationProductFormSystem__c</fullName>
        <description>powder | tablets | carton + system</description>
        <inlineHelpText>powder | tablets | carton + system</inlineHelpText>
        <label>Medication Product Form System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>HealthCloudGA__EhrPatient__c</referenceTo>
        <relationshipLabel>Medication Prescriptions</relationshipLabel>
        <relationshipName>MedicationPrescriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrescriberName__c</fullName>
        <label>Prescriber Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Prescriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prescriber</label>
        <referenceTo>HealthCloudGA__EhrPractitioner__c</referenceTo>
        <relationshipLabel>Medication Prescriptions</relationshipLabel>
        <relationshipName>MedicationPrescriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonCode__c</fullName>
        <description>Reason or indication for writing the prescription</description>
        <inlineHelpText>Reason or indication for writing the prescription</inlineHelpText>
        <label>Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonCondition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reason Condition</label>
        <referenceTo>HealthCloudGA__EhrCondition__c</referenceTo>
        <relationshipLabel>Medication Prescriptions</relationshipLabel>
        <relationshipName>MedicationPrescriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonLabel__c</fullName>
        <description>Friendly name for Reason code or indication for writing the prescription</description>
        <inlineHelpText>Friendly name for Reason code or indication for writing the prescription</inlineHelpText>
        <label>Reason Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReasonSystem__c</fullName>
        <description>Coding System for ReasonCode  or indication for writing the prescription</description>
        <inlineHelpText>Coding System ReasonCode or indication for writing the prescription</inlineHelpText>
        <label>Reason System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__StatusCode__c</fullName>
        <description>Code for: active | on-hold | completed | entered-in-error | stopped | superseded | draft</description>
        <inlineHelpText>Code for: active | on-hold | completed | entered-in-error | stopped | superseded | draft</inlineHelpText>
        <label>Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__StatusLabel__c</fullName>
        <description>Friendly name for Status</description>
        <inlineHelpText>Friendly name for Status</inlineHelpText>
        <label>Status Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__StatusSystem__c</fullName>
        <description>System for Status Code</description>
        <inlineHelpText>System for Status Code</inlineHelpText>
        <label>Status System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SubstituteRestrictReasonCode__c</fullName>
        <description>Any restrictions on medication substitution?</description>
        <label>Substitute Restrict Reason Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SubstituteRestrictReasonLabel__c</fullName>
        <description>Any restrictions on medication substitution, generic / formulary + friendly name</description>
        <inlineHelpText>Any restrictions on medication substitution, generic / formulary + friendly name</inlineHelpText>
        <label>Substitute Restrict Reason Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SubstituteRestrictReasonSystem__c</fullName>
        <description>Any restrictions on medication substitution? coding system</description>
        <inlineHelpText>Any restrictions on medication substitution? coding system</inlineHelpText>
        <label>Substitute Restrict Reason System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SubstituteRestrictTypeCode__c</fullName>
        <description>generic | formulary + code</description>
        <inlineHelpText>generic | formulary + code</inlineHelpText>
        <label>Substitute Restrict Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SubstituteRestrictTypeLabel__c</fullName>
        <description>generic | formulary + code friendly name</description>
        <inlineHelpText>generic | formulary + code friendly name</inlineHelpText>
        <label>Substitute Restrict Type Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SubstituteRestrictTypeSystem__c</fullName>
        <description>generic | formulary + coding system</description>
        <inlineHelpText>generic | formulary + coding system</inlineHelpText>
        <label>Substitute Restrict Type System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EHR Medication Prescription</label>
    <nameField>
        <displayFormat>Pres-{0}</displayFormat>
        <label>EHR Medication Prescription ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Medication Prescriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>